kubernetes/10-graph-replayer.yml
# # Mirror specific services
# version: '3.7'

# services:
#   storage:
#     environment:
#       FLAVOR: mirror
#   graph-replayer:
#     image: softwareheritage/replayer:${SWH_IMAGE_TAG:-latest}
#     environment:
#       STATSD_HOST: prometheus-statsd-exporter
#       STATSD_PORT: 9125
#     configs:
#       - source: graph-replayer
#         target: /etc/softwareheritage/config.yml
#     command:
#       - graph-replayer
#     depends_on:
#       - storage

# configs:
#   graph-replayer:
#     file: conf/graph-replayer.yml
#     name: graph-replayer
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-replayer
  labels:
    app: graph-replayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graph-replayer
  template:
    metadata:
      labels:
        app: graph-replayer
    spec:
      containers:
      - name: graph-replayer
        image: registry.default/softwareheritage/replayer:latest
        imagePullPolicy: Always
        args: 
          - graph-replayer
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: graph-replayer
