kubernetes/11-content-replayer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-replayer
  labels:
    app: content-replayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-replayer
  template:
    metadata:
      labels:
        app: content-replayer
    spec:
      containers:
      - name: content-replayer
        image: registry.default/softwareheritage/replayer:latest
        imagePullPolicy: Always
        args: 
          - content-replayer
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: content-replayer
