kubernetes/02-objstorage.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: objstorage
  labels:
    app: objstorage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: objstorage
  template:
    metadata:
      labels:
        app: objstorage
    spec:
      containers:
      - name: objstorage
        image: registry.default/softwareheritage/base:latest
        args: 
          - objstorage
        ports:
        - containerPort: 5003
        volumeMounts:
        - mountPath: "/srv/softwareheritage/objects"
          name: objstorage-pvc
        - name: config
          mountPath: /etc/softwareheritage/config.yml
          subPath: config.yml
          readOnly: true
      volumes:
        - name: config
          configMap:
            name: objstorage
        - name: objstorage-pvc
          persistentVolumeClaim:
            claimName: objstorage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: objstorage
spec:
  type: ClusterIP
  selector:
    app: objstorage
  ports:
    - port: 5003
      targetPort: 5003
