kubernetes/02_storage-db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-db
  labels:
    app: storage-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-db
  template:
    metadata:
      labels:
        app: storage-db
    spec:
      containers:
      - name: storage-db
        image: postgres:13.0
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: storage-db-pvc
      volumes:
        - name: storage-db-pvc
          persistentVolumeClaim:
            claimName: storage-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: storage-db
spec:
  type: ClusterIP
  selector:
    app: storage-db
  ports:
    - port: 5432
      targetPort: 5432
