kubernetes/03-storage.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage
  labels:
    app: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      containers:
      - name: storage
        image: registry.default/softwareheritage/base:latest
        imagePullPolicy: Always
        command: 
          - /entrypoint.sh
          - storage
        ports:
        - containerPort: 5002
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
          - name: db-password
            mountPath: /run/secrets/postgres-password
            subPath: POSTGRES_PASSWORD
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: storage
        - name: db-password
          secret:
            secretName: storage-db
---
apiVersion: v1
kind: Service
metadata:
  name: storage
spec:
  type: ClusterIP
  selector:
    app: storage
  ports:
    - port: 5002
      targetPort: 5002
