kubernetes/05-web.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  labels:
    app: memcached
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
      - name: memcached
        image: memcached
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
spec:
  type: ClusterIP
  selector:
    app: memcached
  ports:
    - port: 11211
      targetPort: 11211
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: registry.default/softwareheritage/web:latest
        imagePullPolicy: Always
        args: 
          - serve
        ports:
        - containerPort: 5004
        volumeMounts:
          - name: config
            mountPath: /etc/softwareheritage/config.yml
            subPath: config.yml
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: web
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 5004
      targetPort: 5004
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: web.default
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port: 
              number: 5004
